--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button {
 .container {
   display: grid;
   resize: both;
-  overflow: hidden;
+  overflow: auto;
   height: 100vh;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 5fr;
@@ -98,13 +98,17 @@ ul {
   fill: #2a2d41;
 }
 
+.search-container > form {
+  flex-grow: 1;
+}
+
 #search {
   border: none;
   border-radius: 14px;
   font-size: 1.5rem;
   background: #e2e8f0;
   display: inline-block;
-  width: 900px;
+  width: 100%;
 }
 
 .notification-container {
