--- a/style.css
+++ b/style.css
@@ -7,13 +7,6 @@ body {
   color: #2a2d41;
 }
 
-/*
-baby powder ("white"): #fdfffc
-space cadet ("black"): #2c2a4a
-jonquil (accent): #f7cb15
-cordovan: #984447
-*/
-
 :root {
   font-size: 16px;
 }
@@ -35,7 +28,7 @@ button {
 
 .container {
   display: grid;
-  resize: both;
+  /*resize: both;*/
   overflow: auto;
   height: 100vh;
   grid-template-columns: 1fr 4fr;
@@ -76,7 +69,6 @@ ul {
 
 .head-bar {
   padding: 32px 56px;
-  box-shadow: 24px 12px 5px #64748b; /*slate from Tailwind, not currently working*/
   display: grid;
   gap: 16px;
   grid-template-rows: 1fr 1fr;
